--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <h1 id="variable-title">Maximilian Kirmse</h1>
     </div>
     <div class="test"></div>
+    <div class="settings">
+        Vertical Strech: <input type="checkbox" name="vartical-scaling" id="vartical-scaling-toggle"  onchange="toggleVerticalStrech(this)" checked>
+
+    </div>
 </body>
 <footer>
     <script src="main.js"></script>
