strech inlk button styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="strech-container">
-        <h1 id="variable-title">Maximilian Kirmse</h1>
+        <h1 class="but" id="variable-title">Maximilian Kirmse</h1>
     </div>
     <div class="test"></div>
     <div class="settings">
@@ -17,7 +17,7 @@
 
     </div>
 </body>
-<footer>
+<footer>    
     <script src="main.js"></script>
 </footer>
 </html>
